--- a/app/shared/resource-compact-list/_resource-compact-list.scss
+++ b/app/shared/resource-compact-list/_resource-compact-list.scss
@@ -78,17 +78,17 @@
         height: $app-ResourceCard-height;
       }
       @media (min-width: $screen-lg-min) {
-        margin-left: 8px;
         width: 1228px;
         height: 200px;
       }
       @media (min-width: $screen-md-min) and (max-width: $screen-lg-min) {
-        margin-left: 8px;
         width: 878px;
       }
       @media (min-width: $screen-sm-min) and (max-width: $screen-md-min) {
-        margin-left: 8px;
         width: 688px;
+      }
+      @media (min-width: 1200px) and (max-width: 1400px) {
+        width: 1080px;
       }
     }
     &__content {
